finish product controller

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -20,6 +20,8 @@
     <div th:if="${param.error}" style="color: rebeccapurple">
         Неправильные имя и пароль
     </div>
+    <br>
+    <a href="/auth/registration">Registration</a>
 
 </form>
 
