--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -11,6 +11,11 @@
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Logout"/>
 </form>
+<br>
+<a href="/people">Люди</a>
+<br>
+<hr>
+<a href="/products">Товары</a>
 
 </body>
 </html>
