--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -11,8 +11,11 @@
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Logout"/>
 </form>
-<br>
-<a href="/people">Люди</a>
+
+<div th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+    <a href="/people">Люди</a>
+</div>
+
 <br>
 <hr>
 <a href="/products">Товары</a>
