--- a/src/main/resources/templates/products/show.html
+++ b/src/main/resources/templates/products/show.html
@@ -18,24 +18,33 @@
 
 <div th:if="${people}">
     <span>Товар еще ни кто не заказал: </span>
-    <form th:method="PATCH" th:action="@{/products/{id}/assign(id=${product.getId()})}">
+    <form th:method="PATCH" th:object="${product}" th:action="@{/products/{id}/assign(id=${product.getId()})}">
         <label for="person"> Выберете человека: </label>
         <select th:object="${person}" th:field="*{id}" id="person">
             <option th:each="person : ${people}" th:value="${person.getId()}" th:text="${person.getUsername()}"></option>
         </select>
-        <input type="submit" value="Взять товара">
+        <label for="count">Count</label>
+        <input type="text" th:field="*{count}" id="count">
+        <div style="color: blueviolet" th:if="${#fields.hasErrors('count')}" th:errors="*{product.getCount()}">Count</div>
+        <br>
+
+        <input type="submit" value="Взять товар">
     </form>
 </div>
 <br>
 <hr>
-<form th:method="GET" th:action="@{/products/{id}/edit(id=${product.getId()})}">
-    <input type="submit" value="Редактировать">
-</form>
+<div th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+    <form th:method="GET" th:action="@{/products/{id}/edit(id=${product.getId()})}">
+        <input type="submit" value="Редактировать">
+    </form>
+</div>
 <br>
 <hr>
-<form th:method="DELETE" th:action="@{/products/{id}(id=${product.getId()})}">
-    <input type="submit" value="Удалить">
-</form>
+<div th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+    <form th:method="DELETE" th:action="@{/products/{id}(id=${product.getId()})}">
+        <input type="submit" value="Удалить">
+    </form>
+</div>
 <br>
 <a href="/products">Вернуться к списку товаров</a>
 
