--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Products</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 <body>
+<div class="container-lg">
+    <div class="container">
+        <div class="sideba" layout:fragment="sidebar">
+            <form name="f" method="post" action="/process_login">
+                <div class="mb-3">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-<form name="f" method="post" action="/process_login">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    <label class="form-label" for="username">Введите имя пользователя</label>
+                    <input class="form-control" type="text" name="username" id="username"/>
+                    <br/>
+                    <label class="form-label" for="password">Введите пароль пользователя</label>
+                    <input class="form-control" type="password" name="password" id="password"/>
+                    <br/>
+                    <input class="btn btn-primary" type="submit" value="Войти">
 
-    <label for="username">Введите пользователя</label>
-    <input type="text" name="username" id="username"/>
-    <br/>
-    <label for="password">Введите пользователя</label>
-    <input type="password" name="password" id="password"/>
-    <br/>
-    <input type="submit" value="Login">
-
-    <div th:if="${param.error}" style="color: rebeccapurple">
-        Неправильные имя и пароль
+                    <div th:if="${param.error}" style="color: rebeccapurple">
+                        Неправильные имя и пароль
+                    </div>
+                    <br>
+                    <br>
+                    <a class="btn btn-primary" href="/auth/registration">Регистрация</a>
+                </div>
+            </form>
+        </div>
     </div>
-    <br>
-    <a href="/auth/registration">Registration</a>
-
-</form>
-
+</div>
 </body>
 </html>
+
