--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -1,29 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>Products</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 <body>
-  <form th:method="POST" th:action="@{/auth/registration}" th:object="${person}">
-    <label for="username">Введите имя пользователя: </label>
-    <input type="text" th:field="*{username}" id="username">
-    <div style="color: red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</div>
-      <br>
-      <label for="phone">Введите телефон пользователя: </label>
-      <input type="text" th:field="*{phone}" id="phone">
-      <div style="color: red" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">Phone Error</div>
-      <br>
-      <label for="email">Введите электронную почту пользователя: </label>
-      <input type="text" th:field="*{email}" id="email">
-      <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
-      <br>
-      <label for="password">Введите пароль пользователя: </label>
-      <input type="password" th:field="*{password}" id="password">
-      <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</div>
-      <br>
-      <input type="submit" value="Sign up!">
-  </form>
-
+<div class="container-lg">
+    <div class="container">
+        <div class="sideba" layout:fragment="sidebar">
+            <form th:method="POST" th:action="@{/auth/registration}" th:object="${person}">
+                <label class="form-label" for="username">Введите имя пользователя: </label>
+                <input class="form-control" type="text" th:field="*{username}" id="username">
+                <div class="form-text" style="color: red" th:if="${#fields.hasErrors('username')}"
+                     th:errors="*{username}">Username Error
+                </div>
+                <br>
+                <label class="form-label" for="phone">Введите телефон пользователя: </label>
+                <input class="form-control" type="text" th:field="*{phone}" id="phone">
+                <div class="form-text" style="color: red" th:if="${#fields.hasErrors('phone')}"
+                     th:errors="*{phone}">Phone Error
+                </div>
+                <br>
+                <label class="form-label" for="email">Введите электронную почту пользователя: </label>
+                <input class="form-control" type="text" th:field="*{email}" id="email">
+                <div class="form-text" style="color: red" th:if="${#fields.hasErrors('email')}"
+                     th:errors="*{email}">Email Error
+                </div>
+                <br>
+                <label class="form-label" for="password">Введите пароль пользователя: </label>
+                <input class="form-control" type="password" th:field="*{password}" id="password">
+                <div class="form-text" style="color: red" th:if="${#fields.hasErrors('password')}"
+                     th:errors="*{password}">Password Error
+                </div>
+                <br>
+                <input class="btn btn-primary" type="submit" value="Зарегистрироваться!">
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
