--- a/src/main/resources/templates/weather/get.html
+++ b/src/main/resources/templates/weather/get.html
@@ -1,32 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Products</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+
 </head>
 <body>
-<form th:method="POST" th:action="@{/weather/}" th:object="${cityStr}">
-<!--    <label for="cityStr"> Enter your name</label>-->
-<!--    <input type="text" id="cityStr" name="cityStr">-->
-    <label for="name"> Name product</label>
-    <input type="text" th:field="*{name}" id="name">
-    <br>
-    <button type="submit">Send</button>
-</form>
-<!--<form name="f" method="POST" th:action="@{/weather/}">-->
-<!--    <label for="cityStr">Введите город</label>-->
-<!--    <input type="text" name="cityStr" id="cityStr"/>-->
-<!--    <br/>-->
-<!--    <input type="submit" value="Send">-->
-<!--</form>-->
-
-<hr>
-<br>
-
-Country  <p th:text="${city.getCountry()}"></p>
-City  <p th:text="${city.getCity()}"></p>
-Temperature  <p th:text="${city.getTemperature()}"></p>
-Description  <p th:text="${city.getDescription()}"></p>
-
+<div class="container-lg">
+    <div class="container">
+        <div class="sideba" layout:fragment="sidebar">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/images/carosel1.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/carosel2.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/carosel3.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <br>
+            <hr>
+            <form th:method="POST" th:action="@{/weather/}" th:object="${cityStr}">
+                <label class="form-label" for="name">Введите ваш город</label>
+                <input class="form-control" type="text" th:field="*{name}" id="name">
+                <br>
+                <button class="btn btn-primary" type="submit">Send</button>
+            </form>
+            <hr>
+            <br>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Key</th>
+                    <th scope="col">Value</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Country</td>
+                    <td><p th:text="${city.getCountry()}"></p></td>
+                </tr>
+                <tr>
+                    <td>City</td>
+                    <td><p th:text="${city.getCity()}"></p></td>
+                </tr>
+                <tr>
+                    <td>Temperature</td>
+                    <td><p th:text="${city.getTemperature()}"></p></td>
+                </tr>
+                <tr>
+                    <td>Description</td>
+                    <td><p th:text="${city.getDescription()}"></p></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 </body>
 </html>
