--- a/src/main/resources/templates/products/index.html
+++ b/src/main/resources/templates/products/index.html
@@ -26,7 +26,7 @@
                 <div class="items__test">
                     <tr th:each="product : ${products}">
                         <div class="card" style="width: 18rem;">
-                            <img src="/images/hero_announce__bwxm3afyufua_large_2x.jpg" class="card-img-top"
+                            <img th:src="@{${'/images/' + product.getPathImg()}}" class="card-img-top"
                                  alt="apple">
                             <div class="card-body">
                                 <h5 class="card-title" th:text="${product.getName()}"></h5>
